# reckie-langchain

./: .env.example  .flake8  .gitignore  .gitmodules  CLAUDE.md  DUAL_LAYER_LOGGING_IMPLEMENTATION.md  FIXTURE_GENERATION_READY.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest-junit.xml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  feature.yml  user-story.yml
.github/workflows/: ci.yml  publish-reports.yml
config/: document_prompts.yaml
coverage/: class_index.html  function_index.html  z_99ef5326232817d9___init___py.html  z_99ef5326232817d9_document_py.html  z_a35e228392542e9c_relationships_py.html  z_d5d913579db937fa_document_version_py.html  z_f0e24b7f04f99860_dependencies_py.html  z_f0e24b7f04f99860_main_py.html
docs/: README.md  index.html
docs/coverage/: status.json  z_145eef247bfb46b6___init___py.html  z_67f6f9a13eff1831___init___py.html  z_67f6f9a13eff1831_chat_service_py.html  z_67f6f9a13eff1831_conversation_chain_service_py.html  z_67f6f9a13eff1831_relationship_service_py.html  z_99ef5326232817d9_relationship_py.html  z_a35e228392542e9c_chat_py.html  z_a35e228392542e9c_documents_py.html  z_a3eecf107d40a09d___init___py.html  z_d5d913579db937fa___init___py.html  z_d5d913579db937fa_document_relationship_py.html  z_d5d913579db937fa_document_type_py.html  z_d5d913579db937fa_user_py.html  z_f1aa34bc7b1afc18___init___py.html  z_f1aa34bc7b1afc18_connection_py.html
htmlcov/: index.html  z_67f6f9a13eff1831_conversation_chain_service_with_tracking_py.html  z_67f6f9a13eff1831_embedding_service_py.html  z_846f4451f33c129f___init___py.html  z_a35e228392542e9c___init___py.html  z_d5d913579db937fa_conversation_metric_py.html  z_d5d913579db937fa_conversation_py.html  z_d5d913579db937fa_document_embedding_py.html  z_d5d913579db937fa_document_py.html  z_f0e24b7f04f99860___init___py.html  z_f1aa34bc7b1afc18_base_py.html
migrations/sql/: 001_create_users_table.sql  001_test_users_table.sql  002_create_document_types_table.sql  003_create_documents_table.sql  004_create_document_relationships_table.sql  005_create_document_embeddings_table.sql  006_create_conversations_table.sql  007_create_document_versions_table.sql
scripts/: analyze_fixtures_correlation.py  create-github-issues.sh  demo-recording.py  generate-build-health.py  init_db.sql  record-fixtures.py  run-ci-checks.sh
scripts/migrations/: 003_conversation_metrics.sql
src/: __init__.py  placeholder.py
src/api/: dependencies.py  main.py
src/database/: __init__.py  base.py  connection.py
src/services/: __init__.py  chat_service.py  conversation_chain_service.py  conversation_chain_service_with_tracking.py  embedding_service.py  relationship_service.py
src/testing/: __init__.py
tests/: __init__.py  conftest.py  test_api_foundation.py  test_database_base.py  test_document_crud.py  test_hierarchy_traversal.py  test_models_core.py  test_models_embedding.py  test_models_relationships.py  test_placeholder.py  test_relationship_service.py  test_relationships.py  test_ripple_effect_context.py
tests/e2e/: __init__.py  conftest.py  test_e2e_infrastructure.py  (+1 more)
(+170 files in other folders)
